Presto compatibility (#34)
Move Presto plugin to use new interfaces